--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     </div> <!-- /content -->
   </div> <!-- /main -->
 
+  <div>
+    <span id="score-el" style="position: fixed; top:20px; right:30px;">Score: 0</span>
+  </div>
+
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libraries/jquery-2.0.2.min.js"><\/script>')</script>
