--- a/index.html
+++ b/index.html
@@ -52,23 +52,41 @@
         Running override
       </label>
     </div>
+    <div id="results-holder" style="display:none">
+      <div id="results">
+    </div>
+  </div>
 </div>
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libraries/jquery-2.0.2.min.js"><\/script>')</script>
 
+  <!-- JavaScript -->
+  <script src="file:///Users/james/Documents/Github/practice-run/node_modules/alertifyjs/build/alertify.min.js"></script>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="file:///Users/james/Documents/Github/practice-run/node_modules/alertifyjs/build/css/alertify.min.css"/>
+  <!-- Default theme -->
+  <link rel="stylesheet" href="file:///Users/james/Documents/Github/practice-run/node_modules/alertifyjs/build/css/themes/default.min.css"/>
+  <!-- Semantic UI theme -->
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/semantic.min.css"/> -->
+  <!-- Bootstrap theme -->
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.min.css"/> -->
+
+
+  <script src="http://192.168.1.159:8080/socket.io/socket.io.js"></script>
   <script src="js/libraries/stats.min.js"></script>
   <script src="js/combined.min.js"></script>
   <script src="js/app/main.js"></script>
   <!-- Google Analytics: change UA-XXXXXXXX-X to be your site's ID. -->
-  <script>
+  <!-- <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
     e.src='//www.google-analytics.com/analytics.js';
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
     ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-  </script>
+  </script> -->
 </body>
 </html>
